# UFaceNet

./: .gitignore  CLAUDE.md  README.md  SOUL.md  program.md  pyproject.toml  setup.py
autoresearch/: program_ufacenet.md
configs/: datasets.example.yaml  ufacenet_base.yaml  ufacenet_frec_consistency.yaml  ufacenet_frec_frozen.yaml
data/manifests/: datasets.json
facexformer/: README.md
research/: ACCV2026_PLAN.md  BENCHMARKS.md  BENCHMARK_LEDGER.md  CLAUDE_FULL_REPO_PROMPT.md  CODEX_5090_PROMPT.md  DATASETS.md  DATASET_BLOCKERS.md  EVIDENCE_LEDGER.md  EXPERIMENT_QUEUE.md  FACEXFORMER_V3_NOTES.md  REMOVAL_LOG.md  SOURCES.md  TASK_MATRIX.md  UFACENET_ARCHITECTURE.md  results.tsv
research/figures/: README.md
scripts/: check_image_outputs.py  download_datasets.py  eval_original_tasks.py  eval_reconstruction.py  make_qualitative_grid.py  prepare_lfw_frec.py  run_inference.py  train_frec.py  validate_datasets.py  validate_environment.py
ufacenet/: __init__.py  checkpoint.py  decoder.py  losses.py  model.py  reconstruction.py  tasks.py  transformer.py
ufacenet/data/: __init__.py  download.py  image_folder.py  registry.py
ufacenet/metrics/: __init__.py  consistency.py  fid.py  identity.py  image.py
ufacenet/tests/: test_checkpoint.py  test_metrics.py  test_model.py  test_tasks.py
