[project]
name = "ufacenet"
version = "0.1.0"
description = "Unified facial analysis and high-fidelity face reconstruction research scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.20",
    "numpy>=1.23",
    "opencv-python>=4.8",
    "pillow>=9.0",
    "pyyaml>=6.0",
    "scipy>=1.8",
    "torch>=2.8,<2.9",
    "torchvision>=0.23,<0.24",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ufacenet"]

[tool.pytest.ini_options]
testpaths = ["ufacenet/tests"]
pythonpath = ["."]
